almost final ig?

--- a/Submissions/nehal-chandna_1024180045/index.html
+++ b/Submissions/nehal-chandna_1024180045/index.html
@@ -74,8 +74,8 @@
 
             <div class="slideshow-wrapper">
                 <div class="slide active">
-                    <a href="https://drive.google.com/file/d/1EwJcdoFxcM9-9v6O1VaJb53UiVMzjuvt/view?usp=sharing" style="display: block; height: 100%; text-decoration: none;">
-                     <img src="images/MOVIE POSTER.png" alt="The Downward Spiral" class="slide-image">
+                    <a href="https://drive.google.com/file/d/1EwJcdoFxcM9-9v6O1VaJb53UiVMzjuvt/view?usp=sharing " style="display: block; height: 100%; text-decoration: none;">
+                     <img src="images/ALBUM.png" alt="The Downward Spiral" class="slide-image">
                      <div class="slide-content">
                         <h3 class="slide-title">The Downward Spiral</h3>
                         <p class="slide-description">Capturing the essence of the album's namesake by the nine inch nails.</p>
@@ -84,8 +84,8 @@
                 </div>
                 
                 <div class="slide">
-                    <a href="https://drive.google.com/file/d/1x2z5Et1RTj4sAV3kAXyax7poI7RQjzHh/view?usp=sharing" style="display: block; height: 100%; text-decoration: none;">
-                     <img src="images/ALBUM.png" alt="Into the woods" class="slide-image">
+                    <a href=" https://drive.google.com/file/d/1x2z5Et1RTj4sAV3kAXyax7poI7RQjzHh/view?usp=sharing" style="display: block; height: 100%; text-decoration: none;">
+                     <img src="images/MOVIE POSTER.png" alt="Into the woods" class="slide-image">
                      <div class="slide-content">
                         <h3 class="slide-title">Into the Woods</h3>
                         <p class="slide-description">Abstract composition inspired by the paperback edition of norwegain wood and pinterest.</p>
@@ -95,10 +95,10 @@
                 
                 <div class="slide">
                     <a href="" style="display: block; height: 100%; text-decoration: none;">
-                     <img src="images/MOVIE POSTER.png" alt="midnight stories" class="slide-image">
+                     <img src="images/midnight stories.png" alt="midnight stories" class="slide-image">
                      <div class="slide-content">
                         <h3 class="slide-title">Midnight Stories</h3>
-                        <p class="slide-description">Nocturnal photography exploring the mysterious beauty of city lights and moonlit landscapes.</p>
+                        <p class="slide-description">Nocturnal graphic art exploring the mysterious choas of life and clutter.</p>
                      </div>
                     </a>
                 </div>
@@ -117,7 +117,7 @@
                     <a href="https://drive.google.com/file/d/1qrRSsP-OVh-c0NR52FDygGb0ntJkjNyR/view?usp=sharing" style="display: block; height: 100%; text-decoration: none;">
                      <img src="images/vertigo.jpg" alt="Vertigo" class="slide-image">
                      <div class="slide-content">
-                        <h3 class="slide-title">vertigo</h3>
+                        <h3 class="slide-title">Vertigo</h3>
                         <p class="slide-description">Cuz i've lost my ability to think straight at this point</p>
                      </div>
                     </a> 
